# advent-of-code

./: .gitignore  pyproject.toml
src/: data_fetch.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py
